<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/secondcolor"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:contentDescription="Board"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/logo_main" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:hint="Email"
            android:ems="10"
            android:drawableLeft="@drawable/email"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editTextpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:hint="Password"
            android:drawableLeft="@drawable/pwd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_rounded_button"
            android:padding="10dp"
            android:text="Login"
            android:textColor="#01579B" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center" />

        <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="New User?"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:gravity="center"
        />


    </LinearLayout>

</RelativeLayout>
