<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="Map"
       />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="Search"
        />
    <item
        android:id="@+id/addTask"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="Add Task"
        />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="Profile"
        />
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_stat_name"
        android:title="Log Out"
        />


</menu>