<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/secondcolor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:layout_marginTop="60dp"
                android:contentDescription="Board"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:hint="UserName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/border_color"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="Password"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/border_color"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="Email"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/border_color"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:hint="PhoneNumber"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/border_color"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editTextfName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/border_color"
                android:hint="Full Name"
                />
            <Button
                android:id="@+id/buttonsave"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#7D77FF"
                android:background="@drawable/white_rounded_button"
                android:text="Save"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
