<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="@drawable/thirdcolor"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:src="@drawable/logo"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:contentDescription="Board" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:text="Username" />

                <EditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_color"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/ic_profile"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:text="Password" />

                <EditText
                    android:id="@+id/EditTextpassword"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_color"
                    android:drawableLeft="@drawable/pwd"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:text="Email" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_color"
                    android:drawableLeft="@drawable/email"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:text="Phone" />

                <EditText
                    android:id="@+id/EditTextphoneNumber"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_color"
                    android:hint="Phone Number"
                    android:inputType="textPersonName"
                    android:drawableLeft="@drawable/ic_phone"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginStart="35dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:text="Name" />

                <EditText
                    android:id="@+id/editTextfullName"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_color"
                    android:hint="Full Name"
                    android:drawableLeft="@drawable/ic_profile"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:padding="5dp" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/white_rounded_button"
                    android:text="Update"
                    android:textColor="#7D77FF" />
        </LinearLayout>
</LinearLayout>